fix : 공통 popup z-index 수정

--- a/src/views/css/popup.css
+++ b/src/views/css/popup.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  z-index: 1000;
   left: 0;
   top: 0;
 }
@@ -18,9 +19,8 @@
   max-width: fit-content;
   margin: auto;
   margin-top: 10%;
-  padding: 20px;
   background-color: white;
   min-height: 300px;
-  z-index: 10;
+  z-index: 1001;
   opacity: 1;
 }
